<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLED"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_ph"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_av"
                    android:textAlignment="center"
                    android:textColor="@color/colorPh"
                    android:textSize="60sp"/>

                <TextView
                    android:id="@+id/suff_ph"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/title_ph"
                    android:textColor="@color/colorUnits"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_redox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_av"
                    android:textAlignment="center"
                    android:textColor="@color/colorRx"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/suff_redox"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/unit_redox"
                    android:textColor="@color/colorUnits"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_chlorine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_av"
                    android:textAlignment="center"
                    android:textColor="@color/colorCl"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/suff_chlorine"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/unit_chlorine"
                    android:textColor="@color/colorUnits"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/seek_ph"
        android:textAlignment="center"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/ph_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:max="13"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:progressDrawable="@drawable/progress_drawable"
        android:splitTrack="false"
        android:thumb="@drawable/seekbar_thumb"
        android:thumbOffset="0dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/seek_redox"
        android:textAlignment="center"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/rx_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:max="22"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:progressDrawable="@drawable/progress_drawable"
        android:splitTrack="false"
        android:thumb="@drawable/seekbar_thumb"
        android:thumbOffset="0dp"/>
</LinearLayout>